--- a/src/components/list.css
+++ b/src/components/list.css
@@ -9,3 +9,8 @@
 .example::-webkit-scrollbar {
   display: none;
 }
+@media only screen and (max-width: 600px) {
+  .div {
+    display: none;
+  }
+}
